# public/swagger/main.yaml
@@ -217,45 +217,6 @@ paths:
                 $ref: '#/components/schemas/UnauthorizedError'
 
   /blogs:
-    post:
-      tags:
-        - Blog
-      summary: Yeni blog oluştur
-      description: Kullanıcı girişi yapılmış olmalı
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BlogCreate'
-      responses:
-        '201':
-          description: Blog başarıyla oluşturuldu
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BlogResponse'
-        '400':
-          description: Validation hatası
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationError'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UnauthorizedError'
-        '500':
-          description: Server hatası
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ServerError'
-
     get:
       tags:
         - Blog
@@ -364,107 +325,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ServerError'
 
-  /blogs/{blogId}:
-    put:
-      tags:
-        - Blog
-      summary: Blog güncelle
-      description: Kullanıcı girişi yapılmış olmalı
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: blogId
-          in: path
-          description: Blog ID'si
-          required: true
-          schema:
-            type: integer
-          example: 1
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BlogUpdate'
-      responses:
-        '200':
-          description: Blog başarıyla güncellendi
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BlogResponse'
-        '400':
-          description: Validation hatası
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationError'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UnauthorizedError'
-        '404':
-          description: Blog bulunamadı
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NotFoundError'
-        '500':
-          description: Server hatası
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ServerError'
 
-    delete:
-      tags:
-        - Blog
-      summary: Blog sil
-      description: Kullanıcı girişi yapılmış olmalı
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: blogId
-          in: path
-          description: Blog ID'si
-          required: true
-          schema:
-            type: integer
-          example: 1
-      responses:
-        '200':
-          description: Blog başarıyla silindi
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: "success"
-                  message:
-                    type: string
-                    example: "Blog başarıyla silindi"
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UnauthorizedError'
-        '404':
-          description: Blog bulunamadı
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NotFoundError'
-        '500':
-          description: Server hatası
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ServerError'
 
 components:
   securitySchemes:
@@ -477,10 +338,6 @@ components:
   schemas:
     User:
       $ref: './schemas/user.yaml'
-    BlogCreate:
-      $ref: './schemas/blog-create.yaml'
-    BlogUpdate:
-      $ref: './schemas/blog-update.yaml'
     BlogResponse:
       $ref: './schemas/blog-response.yaml'
     BlogListResponse:
