# routes/api.php
@@ -6,11 +6,8 @@ use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
 use App\Http\Controllers\Api\Auth\RegisterController;
 use App\Http\Controllers\Api\Auth\UserProfileController;
-use App\Http\Controllers\Api\Blog\CreateBlogController;
 use App\Http\Controllers\Api\Blog\ListBlogsController;
 use App\Http\Controllers\Api\Blog\GetBlogController;
-use App\Http\Controllers\Api\Blog\UpdateBlogController;
-use App\Http\Controllers\Api\Blog\DeleteBlogController;
 
 // Test endpoint
 Route::get('/test', TestController::class);
@@ -29,10 +26,7 @@ Route::middleware('auth:sanctum')->group(function () {
 
 Route::prefix('blogs')->group(function () {
 
- // Blog Routes - 5 temel endpoint
- Route::post('/', CreateBlogController::class);           // CREATE
+ // Blog Routes - 2 temel endpoint
  Route::get('/', ListBlogsController::class);            // LIST
  Route::get('/{slug}', GetBlogController::class);       // SINGLE (slug ile)
- Route::put('/{blogId}', UpdateBlogController::class);  // UPDATE
- Route::delete('/{blogId}', DeleteBlogController::class); // DELETE
 });
